<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/forgotPasswordTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/register_text_margin_start"
        android:layout_marginTop="@dimen/register_input_margin_top"
        android:text="@string/validate_password_change"
        android:textColor="@color/white"
        android:textSize="@dimen/register_text_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id = "@+id/weWillSendAnEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/register_text_input_margin_start"
        android:layout_marginEnd="@dimen/register_text_input_margin_end"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView2"
        android:layout_marginTop="@dimen/we_will_send_an_email_text_view_margin_top"
        android:text="@string/type_code_and_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codeChangePasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/white"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/register_username_layout_margin_top"
        android:layout_marginStart="@dimen/register_text_input_margin_start"
        android:layout_marginEnd="@dimen/register_text_input_margin_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/weWillSendAnEmailTextView"
        app:layout_constraintTop_toBottomOf="@+id/weWillSendAnEmailTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeChangePasswordEditText"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_bg_selector"
            android:layout_width="match_parent"
            android:maxLength="8"
            android:hint="@string/code_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/white"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
        android:layout_marginStart="@dimen/register_text_input_margin_start"
        android:layout_marginEnd="@dimen/register_text_input_margin_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="@+id/weWillSendAnEmailTextView"
        app:layout_constraintTop_toBottomOf="@+id/codeChangePasswordTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordEditText"
            android:background="@drawable/edit_text_bg_selector"
            android:layout_height="60dp"
            android:layout_width="match_parent"

            android:inputType="textPassword"
            android:hint="@string/new_password_text" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/updatePwButton"
        style="@style/roundedButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
        android:layout_marginStart="@dimen/register_text_input_margin_start"
        android:layout_marginEnd="@dimen/register_text_input_margin_end"
        android:text="@string/update_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>