<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/forgotPasswordTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/register_text_margin_start"
        android:layout_marginTop="370dp"
        android:text="@string/forgot_password_text_2"
        android:textColor="@color/white"
        android:textSize="@dimen/register_text_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id = "@+id/weWillSendAnEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/register_text_input_margin_start"
        android:layout_marginEnd="@dimen/register_text_input_margin_end"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView2"
        android:layout_marginTop="@dimen/we_will_send_an_email_text_view_margin_top"
        android:text="@string/we_will_send_email_password_change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailForgotPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:background="@null"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/white"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/register_username_layout_margin_top"
        android:layout_marginStart="@dimen/register_text_input_margin_start"
        android:layout_marginEnd="@dimen/register_text_input_margin_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/weWillSendAnEmailTextView"
        app:layout_constraintTop_toBottomOf="@+id/weWillSendAnEmailTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailForgotPasswordEditText"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_bg_selector"
            android:layout_width="match_parent"
            android:hint="@string/email_hint_text" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/emailMeButton"
        android:background = "@drawable/rounded_button"
        android:textColor="@color/white"
        android:backgroundTint="@color/loginButtonColor"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
        android:layout_marginStart="@dimen/register_text_input_margin_start"
        android:layout_marginEnd="@dimen/register_text_input_margin_end"
        android:text="@string/email_me_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailForgotPasswordTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>