<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/register_text_margin_start"
            android:layout_marginTop="@dimen/register_input_margin_top"
            android:text="@string/register_text"
            android:textColor="@color/white"
            android:textSize="@dimen/register_text_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true"
            android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
            android:layout_marginStart="@dimen/register_text_input_margin_start"
            android:layout_marginEnd="@dimen/register_text_input_margin_end"
            app:layout_constraintEnd_toEndOf="@+id/registerTextView"
            app:layout_constraintStart_toStartOf="@+id/registerTextView"
            app:layout_constraintTop_toBottomOf="@+id/registerTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstNameEditText"
                android:layout_height="60dp"
                android:background="@drawable/edit_text_bg_selector"
                android:layout_width="match_parent"
                android:hint="@string/first_name_hint_text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true"
            android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
            android:layout_marginStart="@dimen/register_text_input_margin_start"
            android:layout_marginEnd="@dimen/register_text_input_margin_end"
            app:layout_constraintEnd_toEndOf="@+id/registerTextView"
            app:layout_constraintStart_toStartOf="@+id/registerTextView"
            app:layout_constraintTop_toBottomOf="@+id/firstNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameEditText"
                android:layout_height="60dp"
                android:background="@drawable/edit_text_bg_selector"
                android:layout_width="match_parent"
                android:hint="@string/last_name_hint_text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true"
            android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
            android:layout_marginStart="@dimen/register_text_input_margin_start"
            android:layout_marginEnd="@dimen/register_text_input_margin_end"
            app:layout_constraintEnd_toEndOf="@+id/registerTextView"
            app:layout_constraintStart_toStartOf="@+id/registerTextView"
            app:layout_constraintTop_toBottomOf="@+id/lastNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:background="@drawable/edit_text_bg_selector"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                android:hint="@string/email_hint_text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
            android:layout_marginStart="@dimen/register_text_input_margin_start"
            android:layout_marginEnd="@dimen/register_text_input_margin_end"
            app:layout_constraintEnd_toEndOf="@+id/emailTextInputLayout"
            app:layout_constraintStart_toStartOf="@+id/emailTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:background="@drawable/edit_text_bg_selector"
                android:layout_height="60dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:hint="@string/password_hint_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/birthDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/register_text_margin_start"
            android:layout_marginTop="20dp"
            android:text="@string/birth_date_text"
            android:textColor="@color/white"
            android:textSize="@dimen/register_text_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout" />


        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/register_text_input_margin_start"
            android:background="@color/white"
            android:layout_marginEnd="@dimen/register_text_input_margin_end"
            android:endYear="2020"
            android:startYear="1920"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthDateTextView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_height="wrap_content"
            android:background = "@drawable/rounded_button"
            android:backgroundTint="@color/loginButtonColor"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/register_email_password_layout_margin_top"
            android:layout_marginStart="@dimen/register_text_input_margin_start"
            android:layout_marginEnd="@dimen/register_text_input_margin_end"
            android:text="@string/register_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePicker" />

        <TextView
            android:id="@+id/alreadyHaveAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/registerButton"
            app:layout_constraintTop_toBottomOf="@+id/registerButton"
            android:layout_marginTop="@dimen/already_have_account_margin_top"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/already_have_account_margin_start"
            android:text="@string/already_have_account_text"
            android:paddingBottom="@dimen/already_have_account_text_padding_bottom"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="2"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_text"
            android:textColor="@color/register_button_color"
            android:layout_marginStart="@dimen/log_in_text_margin_start"
            android:textSize="16sp"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="2"
            app:layout_constraintStart_toEndOf="@+id/alreadyHaveAccountTextView"
            app:layout_constraintTop_toTopOf="@+id/alreadyHaveAccountTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>